<resources>
    <string name="app_name">bookaroom</string>
    <string name="google_api_key">AIzaSyB7UusHNc04l8GsOvCd3-K3VXYZM4BEc90</string>
    <string name="login_failed" translatable="false">Wrong username or password</string>
    <string name="login_success">Login successful!</string>
    <string name="login_invalid_input">Please enter your username and password</string>
    <string name="login_failed_failure">Wrong username or password! Request failure!</string>
    <string name="register_text">Don\'t have an account? Register</string>
    <string name="register_select_picture">Select your profile picture</string>
    <string name="register_username">Username:</string>
    <string name="register_password">Password:</string>
    <string name="register_confirm_password">Confirm  Password:</string>
    <string name="register_name">Name:</string>
    <string name="register_surname">Surname:</string>
    <string name="register_email">Email:</string>
    <string name="register_phone">Phone Number:</string>
    <string name="register_button">Register</string>
    <string name="update_profile_button">Update</string>
    <string name="register_empty_username">Please enter a username</string>
    <string name="register_empty_passwords">Please enter a password</string>
    <string name="register_passwords_dont_match">Passwords don\'t match</string>
    <string name="register_empty_name">Please enter a name</string>
    <string name="register_empty_surname">Please enter a surname</string>
    <string name="register_empty_email">Please enter an email address</string>
    <string name="register_empty_phone">Please enter a phone number</string>
    <string name="register_empty_image">Please select a profile picture</string>
    <string name="register_role">Role</string>
    <string name="internal_error">An internal error has occured</string>
    <string name="title_activity_search">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_messages_title"></string>
    <string name="nav_profile_title"></string>
    <string name="nav_home_title"></string>
    <string name="nav_host_title"></string>
    <string name="host_address">Address:</string>
    <string name="host_availability_dates">Availability dates:</string>
    <string name="host_max_guests">Maximum number of guests:</string>
    <string name="host_min_price">Minimum price:</string>
    <string name="host_extra_cost_per_guest">Extra cost per guest:</string>
    <string name="host_listing_type">Listing type:</string>
    <string name="host_main_picture">Main Picture:</string>
    <string name="host_select_main_image">Select a main picture for your listing</string>
    <string name="host_select_additional_image">Add an additional image for your listing</string>
    <string name="host_additional_pictures">Additional Pictures:</string>
    <string name="host_search_address_text">Search</string>
    <string name="host_listing_rules">Rules:</string>
    <string name="host_listing_description">Description:</string>
    <string name="host_num_beds">Beds:</string>
    <string name="host_num_bathrooms">Bathrooms:</string>
    <string name="host_num_bedrooms">Bedrooms</string>
    <string name="host_has_living_room">Living room:</string>
    <string name="host_listing_area">Listing Area:</string>
    <string name="host_create_listing">Create</string>
    <string name="host_update_listing">Update</string>
    <string name="host_delete_listing">Delete</string>
    <string name="host_empty_address">Please enter a valid address</string>
    <string name="host_invalid_max_guests">Please enter a valid number of maximum guests</string>
    <string name="host_invalid_min_price">Please enter a valid minimum price</string>
    <string name="host_invalid_extra_cost">Please enter a valid price per extra guest</string>
    <string name="host_invalid_listing_type">Please enter a valid listing type</string>
    <string name="host_empty_description">Please enter a description for your listing</string>
    <string name="host_invalid_number_of_beds">Please enter a valid number of beds</string>
    <string name="host_invalid_number_of_bathrooms">Please enter a valid number of bathrooms</string>
    <string name="host_invalid_number_of_bedrooms">Please enter a valid number of bedrooms</string>
    <string name="host_invalid_listing_area">Please enter a valid area for your listing</string>
    <string name="host_missing_availability_dates">Please enter availability dates for your listing</string>
    <string name="host_invalid_availability_dates">Availability start date must be before the availability end date</string>
    <string name="host_missing_main_picture">Please pick a main picture for your listing</string>
    <string name="error_http_failure">Request failed</string>
    <string name="loading_error">Error loading resource</string>
    <string name="search_state">State:</string>
    <string name="search_city">City:</string>
    <string name="search_country">Country:</string>
    <string name="search_check_in">Check in:</string>
    <string name="search_check_out">Check out:</string>
    <string name="search_number_of_guests">Number of guests:</string>
    <string name="search_listings">Search</string>
    <string name="search_error_state">Please enter a state</string>
    <string name="search_error_city">Please enter a city</string>
    <string name="search_error_country">Please enter a country</string>
    <string name="search_error_check_in">Please enter a check in date</string>
    <string name="search_error_check_out">Please enter a check out date</string>
    <string name="search_error_number_of_guests">Please enter number of guests</string>
    <string name="search_error_invalid_dates">Check out date must be after the check in date</string>
    <string name="search_no_results">No search results available</string>
    <string name="listing_address_title">Address:</string>
    <string name="listing_category_space">Space</string>
    <string name="listing_category_location">Location</string>
    <string name="listing_beds_title">Number of beds:</string>
    <string name="listing_bathrooms_title">Number of bathrooms:</string>
    <string name="listing_type_title">Type:</string>
    <string name="listing_bedrooms_title">Number of bedrooms:</string>
    <string name="listing_category_description">Description</string>
    <string name="listing_category_rules">Rules</string>
    <string name="listing_category_amenities">Amenities</string>
    <string name="listing_has_living_room_title">Living room:</string>
    <string name="listing_category_host">Host</string>
    <string name="listing_view_host">View profile</string>
    <string name="listing_area_title">Area:</string>
    <string name="listing_view_host_no_id">Host page is unavailable</string>
    <string name="host_profile_category_about">About</string>
    <string name="host_profile_name_title">Name:</string>
    <string name="host_profile_surname_title">Surname:</string>
    <string name="host_profile_email_title">Email:</string>
    <string name="host_profile_phone_title">Phone:</string>
    <string name="host_profile_category_reviews">Reviews</string>
    <string name="listing_category_pictures">Pictures</string>
    <string name="listing_category_review">Submit your review</string>
    <string name="listing_submit_review">Submit</string>
    <string name="listing_reserve">RESERVE</string>
    <string name="listing_message_host">Message Host</string>
    <string name="messages_send">Send</string>
</resources>