<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_messages"
        android:enabled="true"
        android:icon="@drawable/messages_icon"
        android:title="@string/nav_messages_title"/>
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/nav_profile_title"/>
    <item
        android:id="@+id/nav_guest"
        android:enabled="true"
        android:visible="false"
        android:icon="@drawable/guest_icon"
        android:title="@string/nav_home_title"/>
    <item
        android:id="@+id/nav_host"
        android:enabled="true"
        android:icon="@drawable/host_icon"
        android:title="@string/nav_host_title"/>
</menu>