<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.bookaroom.activities.HostActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/host_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_navigation"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_address" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/host_edtAddress"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.70"/>

                    <Button
                        android:id="@+id/host_btn_search_address"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.30"
                        android:text="@string/host_search_address_text"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/host_listing_map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:context="com.example.currentplacedetailsonmap.MapsActivityCurrentPlace" />

                    <ImageView
                        android:id="@+id/transparent_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@android:color/transparent" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_availability_dates" />

                <Button
                    android:id="@+id/host_btnAddDates"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/add_icon" />

                <ListView
                    android:id="@+id/listViewAvailabiliyRanges"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="10dp"
                    android:scrollbars="vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_max_guests" />

                <EditText
                    android:id="@+id/host_edt_max_guests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_min_price" />

                <EditText
                    android:id="@+id/host_edt_min_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_extra_cost_per_guest" />

                <EditText
                    android:id="@+id/host_edt_extra_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_listing_type" />

                <Spinner
                    android:id="@+id/spinnerListingType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_main_picture" />

                <ImageView
                    android:id="@+id/host_main_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="left"
                    android:clickable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_additional_pictures" />

                <Button
                    android:id="@+id/host_btnAddPictures"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/add_icon" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/host_additional_pictures"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scrollbars="horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_listing_rules" />

                <EditText
                    android:id="@+id/host_edt_rules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters|textCapSentences"
                    android:maxLength="2000"
                    android:maxLines="4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_listing_description" />

                <EditText
                    android:id="@+id/host_edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters|textCapSentences"
                    android:maxLength="2000"
                    android:maxLines="4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_num_beds" />

                <EditText
                    android:id="@+id/host_edt_num_beds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_num_bathrooms" />

                <EditText
                    android:id="@+id/host_edt_num_bathrooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_num_bedrooms" />

                <EditText
                    android:id="@+id/host_edt_num_bedrooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_has_living_room" />

                <CheckBox
                    android:id="@+id/host_has_living_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host_listing_area" />

                <EditText
                    android:id="@+id/host_edt_listing_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/host_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/host_delete_button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/design_default_color_background"
            app:layout_constraintBottom_toBottomOf="@+id/host_scrollView"
            app:menu="@menu/bottom_navigation_menu"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>